Use standard directory for config file

--- a/GnuCashUtils/config.yml
+++ b/GnuCashUtils/config.yml
@@ -38,6 +38,12 @@ merchants:
     # oneof does contains operation
     match: oneof("coffee", "starbucks")
     
+  - name: VS
+    match: contains("VICTORIA")
+    
+  - name: "1PASSWORD"
+    match: contains("1PASSWORD")
+    
   - name: "Unknown"
     # can use a regex matcher
     match: regex(".")
