--- a/GnuCashUtils/config.yml.example
+++ b/GnuCashUtils/config.yml.example
@@ -1,6 +1,6 @@
 # the path to the gnucash file (sqlite format)
 database: "/Users/mattburke/Documents/gnucash/test.gnucash"
-  
+
 # banks define matchers for csv files that we can process and tell us which preamble rows to skip
 banks:
   - name: Discover
@@ -9,39 +9,12 @@ banks:
     skip: 1
     # this means the csv is in Date,(ignored),Description,Amount,(ignored) columns. The date can be parsed using the provided C# format string
     headers: "{date:MM/dd/yyyy},_,{description},{amount},_"
-      
+    account: "Liabilities:Discover"
+
   - name: Bank of America
     match: "stmt-\\d+\\.csv$"
     skip: 7
     # an amount can be marked with negative sign. These values should be negated when read from the CSV. The idea is to represent positive numbers as debits to expense accounts.
     # BoA, since its an asset account, records credits as negative values, and a credit on the checking account is a debit to the expense account so we need to negate it
     headers: "{date:MM/dd/yyyy},{description},{-amount},_"
-      
-      
-# merchants defines matchers to identify a merchant from a transaction description
-# the first matching matcher is used. matchers are case insensitive
-merchants:
-  - name: "AWS"
-    # Can use a simple contains matcher
-    match: contains("AMAZON WEB SERVICES")
-    account: "Expenses:Subscriptions"
-    
-  - name: "Amazon"
-    # can use a starts with matcher
-    match: startswith("AMAZON")
-    account: "Expenses:Misc Merchandise"
-    
-    # can also use a comparison on amount
-  - name: "QuickTrip Gas"
-    match: contains("QT") and amount > 10
-    account: "Expenses:Auto:Gas"
-    
-  - name: "QuickTrip Snack"
-    match: contains("QT") and amount <= 10
-    account: "Expenses:Dining:Quick Service"
-    
-  - name: "Coffee Shop"
-    # oneof does contains operation
-    match: oneof("coffee", "starbucks")
-    account: "Expenses:Dining:Coffee Shops"
- 
+    account: "Assets:Bank of America"
