--- a/GnuCashUtils/GnuCashUtils.csproj
+++ b/GnuCashUtils/GnuCashUtils.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.5" />
         <PackageReference Include="CsvHelper" Version="33.1.0" />
         <PackageReference Include="Dapper" Version="2.1.66" />
+        <PackageReference Include="Dapper.SqlBuilder" Version="2.1.66" />
         <PackageReference Include="MediatR" Version="12.4.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.3" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
