--- a/GnuCashUtils.Tests/GnuCashUtils.Tests.csproj
+++ b/GnuCashUtils.Tests/GnuCashUtils.Tests.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.12" />
         <PackageReference Include="AwesomeAssertions" Version="9.3.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.4" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
